// Copyright 2025 Gravitational, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package proto;

option go_package = "github.com/gravitational/teleport/api/client/proto/updaterv2info";

message UpdaterV2Info {
  // UpdateGroup is the update group the agent's updater is part of.
  // The autoupdate_agent_rollout resource controls when different groups update.s
  // Reporting the update group in the Hello allows us to track the update progress per group.
  // See RFD 184 for more details.
  string UpdateGroup = 1;
  // UpdateUUID is the agent's updater UUID.
  // Each updater has a UUID, this can be used in two cases:
  // - To update individual agents when doing canary updates
  // - To track the lowest non-updated agent to avoid a deadlock when doing a progressive rollout
  bytes UpdateUUID = 2;
  // UpdaterStatus represents any updater-related status information that the Teleport cluster
  // should be aware of. For example, the fact the updater got disabled, the version pinned,
  // or that the updater seems to not be running.
  UpdaterStatus UpdaterStatus = 3;
}

enum UpdaterStatus {
  // UPDATER_STATUS_UNSPECIFIED is the zero value.
  UPDATER_STATUS_UNSPECIFIED = 0;
  // UPDATER_STATUS_OK means that everything looks OK from the agent pov.
  UPDATER_STATUS_OK = 1;
  // UPDATER_STATUS_DISABLED means that automatic updates seem disabled or paused.
  UPDATER_STATUS_DISABLED = 2;
  // UPDATER_STATUS_PINNED means that a specific version is pinned.
  UPDATER_STATUS_PINNED = 3;
  // UPDATER_STATUS_UNREADABLE means that the agent failed to read its update status.
  UPDATER_STATUS_UNREADABLE = 4;
}
